# fashion-mnist-ml-vs-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
reports/: classifier_metrics.json  comparison.json  comparison.md  rag_autoencoder128_k11_metrics.json  rag_autoencoder128_k15_metrics.json  rag_autoencoder128_k21_metrics.json  rag_autoencoder128_k3_metrics.json  rag_autoencoder128_k5_metrics.json  rag_autoencoder128_k7_metrics.json  rag_autoencoder256_k11_metrics.json  rag_autoencoder256_k15_metrics.json  rag_autoencoder256_k21_metrics.json  rag_autoencoder256_k3_metrics.json  rag_autoencoder256_k5_metrics.json  rag_autoencoder256_k7_metrics.json  rag_autoencoder64_k11_metrics.json  rag_autoencoder64_k15_metrics.json  rag_autoencoder64_k21_metrics.json  rag_autoencoder64_k3_metrics.json  rag_autoencoder64_k5_metrics.json  rag_autoencoder64_k7_metrics.json  rag_blur784_k11_metrics.json  rag_blur784_k15_metrics.json  rag_blur784_k21_metrics.json  rag_blur784_k3_metrics.json  rag_blur784_k5_metrics.json  rag_blur784_k7_metrics.json  rag_cnn_embedding_k11_metrics.json  rag_cnn_embedding_k15_metrics.json  rag_cnn_embedding_k21_metrics.json  rag_cnn_embedding_k3_metrics.json  rag_cnn_embedding_k5_metrics.json  rag_cnn_embedding_k7_metrics.json  rag_cnn_embedding_metrics.json  rag_hog_blur_k11_metrics.json  rag_hog_blur_k15_metrics.json  rag_hog_blur_k21_metrics.json  rag_hog_blur_k3_metrics.json  rag_hog_blur_k5_metrics.json  rag_hog_blur_k7_metrics.json  (+31 more)
tests/: test_api_contracts.py  test_blur_embedding.py  (+16 more)
(+31 files in other folders)
