[project]
name = "fashion-compare"
version = "0.1.0"
description = "Compare CNN and retrieval-augmented classifiers on Fashion-MNIST."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "torch>=2.3",
  "torchvision>=0.18",
  "qdrant-client>=1.9",
  "scikit-learn>=1.5",
  "matplotlib>=3.9",
  "pillow>=10.3",
  "numpy>=1.26",
  "scikit-image>=0.23",
  "scipy>=1.13",
  "joblib>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_compare"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

